# dml-pdfclassify

./: .envrc  .gitignore  .pylintrc  README.md  flake.nix  flake.nix-pyproject.nix  flake.nix.mach-nix  pdfclassify.tmpl  pyproject.toml  result
.github/workflows/: cleanup-old-runs.yml  cleanup-releases.yml  cleanup.yml  release.yml
src/pdfclassify/: _helpers.py  _util.py  argument_handler.py  config.py  default_config.toml  label_boost_cli.py  label_boost_manager.py  label_config.py  main.py  pdf_date.py  pdf_metadata_manager.py  pdf_process.py  pdf_semantic_classifier.py  pdfclassify.toml  verify_classification.py
tests/: conftest.py  test_argument_handler.py  test_config.py  test_label_boost_cli.py  test_label_boost_manager.py  test_label_config.py  test_pdf_metadata_manager.py  test_pdf_process_placeholder.py  test_pdf_process_save_metadata.py  test_pdf_process_with_mock.py  test_pdf_semantic_classifier.py  test_pdfdate.py  test_restore_original_state.py  test_sidecar_original_metadata.py
