[tool.poetry]
name = "pdfclassify"
version = "2025.05.18"
description = "PDF classifier based on content etc"
authors = ["Dave Lane <cheery.koala5370@fastmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmlane/pdfclassify"
include = [
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'docs', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [
   { include = "pdfclassify", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^4.1.0"
pdfminer-six = "^20250416"
joblib = "^1.4.2"
numpy = "^2.2.5"
platformdirs = "^4.3.7"
pypdf = "^5.4.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
isort = ">=5.12.0"
mypy = ">=1.2.0"
pre-commit = "^3.5.0"
pylint = ">=2.17.2"
pypi-simple = ">=1.4.0"
pytest = ">=7.3.1"
pytest-resource-path = ">=1.3.0"
setuptools = ">=68.0.0"
mock = ">=5.1.0"
fpdf = "^1.7.2"

[tool.poetry.scripts]
# Section managed with vi
pdfclassify = "pdfclassify.main:main"

[[tool.poetry.source]]
name = "repositories.fury"
url = "https://pypi.fury.io/dave-lane/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = "src/pdfclassify"
